# skeleton-emsdk-cmake

./: CMakeLists.txt  LICENSE  README.md
clay-app/: CMakeLists.txt  index.html  main.c  main.c.old
clay-app/resources/: index.html
docs/: index.html  index.js  index.wasm  raygui-app.js  raygui-app.wasm
docs/clay-app/: index.html  index.wasm
docs/raygui-app/: index.js  index.wasm
dummy/: .gitignore  CMakeLists.txt  dummy.c
emsdk/: CMakeLists.txt
raygui-app/: .gitignore  CMakeLists.txt  functions.c  functions.h  gui_file_dialogs.h  main.c  shell.html
raylib/: .gitignore  CMakeLists.txt  vars.cmake
